Fix issue with mobile view being too tall

--- a/content/sass/components/roulette-app/_wheel.sass
+++ b/content/sass/components/roulette-app/_wheel.sass
@@ -30,7 +30,6 @@
   flex-direction: column
   align-items: center
   justify-content: space-between
-  height: 100%
   flex-grow: 1
 
 .wheel-application__actions
